# QMesh

./: .gitignore  CMakeLists.txt
include/QMesh/: face.hpp  halfedge.hpp  mesh.hpp  primitives.hpp  types.hpp  vertex.hpp
include/qmesh/: face.hpp  libqmesh.hpp  vertex.hpp
src/: CMakeLists.txt  face.cpp  halfedge.cpp  libqmesh.cpp  mesh.cpp  primitives.cpp  vertex.cpp
test/: CMakeLists.txt  face.cpp  mesh.cpp  primitives.cpp  vertex.cpp
tools/: CMakeLists.txt  qmesh.cpp
